--- a/PROYECTOEJEMPLO.ipynb
+++ b/PROYECTOEJEMPLO.ipynb
@@ -64,15 +64,21 @@
      "output_type": "stream",
      "text": [
       "{'¿Cuál es la capital de Egipto?': 'Cairo', '¿En qué continente se pueden ver más pingüinos?': 'Antártida', '¿En qué país se encuentra la torre Eifeel?': 'Francia', '¿Berlín es la capital de?': 'Alemania', '¿De qué país son típicos los samurais?': 'Japón', '¿A dónde irías si quisieses ver canguros?': 'Australia', '¿A dónde irías si quisieras ver kiwis?': 'Nueva Zelanda', '¿En qué país es tradición pintarse la cara el día de los muertos?': 'México', '¿Tikka masala es un plato tradicional de?...': 'India'}\n",
-      "¿De qué país son típicos los samurais?\n",
-      "Respuesta correcta: Japón\n",
+      "Respuesta correcta: Nueva Zelanda\n",
       "Llevas 1 aciertos\n",
-      "Respuesta correcta: Japón\n",
+      "Respuesta correcta: India\n",
       "Llevas 2 aciertos\n",
-      "Respuesta correcta: Japón\n",
+      "Respuesta correcta: Francia\n",
       "Llevas 3 aciertos\n",
+      "Respuesta correcta: Australia\n",
+      "Llevas 4 aciertos\n",
       "Mala suerte, responde de nuevo\n",
-      "Llevas 1 errores\n"
+      "Llevas 1 errores\n",
+      "Mala suerte, responde de nuevo\n",
+      "Llevas 2 errores\n",
+      "Mala suerte, responde de nuevo\n",
+      "Llevas 3 errores\n",
+      "Has perdido.\n"
      ]
     }
    ],
@@ -80,17 +86,17 @@
     "cuestionario = {\"¿Cuál es la capital de Egipto?\":\"Cairo\", \"¿En qué continente se pueden ver más pingüinos?\" : \"Antártida\", \"¿En qué país se encuentra la torre Eifeel?\": \"Francia\", \"¿Berlín es la capital de?\" : \"Alemania\", \"¿De qué país son típicos los samurais?\" : \"Japón\", \"¿A dónde irías si quisieses ver canguros?\":\"Australia\", \"¿A dónde irías si quisieras ver kiwis?\":\"Nueva Zelanda\", \"¿En qué país es tradición pintarse la cara el día de los muertos?\": \"México\", \"¿Tikka masala es un plato tradicional de?...\": \"India\"}\n",
     "print(cuestionario)\n",
     "import random\n",
-    "pregunta_aleatoria = random.choice(list(cuestionario.keys()))\n",
-    "eleccion= input(pregunta_aleatoria)\n",
-    "print(pregunta_aleatoria)\n",
-    "respuesta_correcta = cuestionario[pregunta_aleatoria]\n",
     "intentosbuenos=5\n",
     "intentosmalos= 3\n",
     "aciertos = 0\n",
     "errores = 0\n",
     "\n",
+    "# Cuando los aciertos sean 5 o los errores sean 3, el juego se tiene que parar.\n",
+    "\n",
     "\n",
     "while intentosbuenos != 0 and intentosmalos != 0:\n",
+    "    pregunta_aleatoria = random.choice(list(cuestionario.keys()))\n",
+    "    respuesta_correcta = cuestionario[pregunta_aleatoria]\n",
     "    eleccion= input(pregunta_aleatoria)\n",
     "\n",
     "    if eleccion == respuesta_correcta:\n",
@@ -98,6 +104,7 @@
     "        aciertos = aciertos+1\n",
     "        intentosbuenos = intentosbuenos -1\n",
     "        print (f\"Llevas {aciertos} aciertos\")\n",
+    "\n",
     "        \n",
     "    else:\n",
     "        print (\"Mala suerte, responde de nuevo\")\n",
@@ -105,13 +112,87 @@
     "        intentosmalos = intentosmalos -1\n",
     "        print (f\"Llevas {errores} errores\")\n",
     "\n",
-    "\n"
+    "if aciertos==5:\n",
+    "    print (\"Has ganado.\")\n",
+    "else:\n",
+    "    print (\"Has perdido.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c52c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Abajo incluiremos el código anterior en una función. Esto es en caso de querer aplicar la misma lógica en otro conjunto de preguntas y respuestas\n",
+    " \n",
+    "def juego_preguntas(dic_preg_resp):\n",
+    "    print(dic_preg_resp)\n",
+    "    import random\n",
+    "    intentosbuenos=5\n",
+    "    intentosmalos=3\n",
+    "    aciertos = 0\n",
+    "    errores = 0\n",
+    "\n",
+    "    while intentosbuenos != 0 and intentosmalos != 0:\n",
+    "        pregunta_aleatoria = random.choice(list(dic_preg_resp.keys()))\n",
+    "        respuesta_correcta = dic_preg_resp[pregunta_aleatoria]\n",
+    "        eleccion= input(pregunta_aleatoria)\n",
+    "\n",
+    "        if eleccion == respuesta_correcta:\n",
+    "            print (f\"Respuesta correcta: {respuesta_correcta}\")\n",
+    "            aciertos = aciertos+1\n",
+    "            intentosbuenos = intentosbuenos -1\n",
+    "            print (f\"Llevas {aciertos} aciertos\")\n",
+    "\n",
+    "        \n",
+    "        else:\n",
+    "            print (\"Mala suerte, responde de nuevo\")\n",
+    "            errores = errores +1\n",
+    "            intentosmalos = intentosmalos -1\n",
+    "            print (f\"Llevas {errores} errores\")\n",
+    "\n",
+    "    if aciertos==5:\n",
+    "        print (\"Has ganado.\")\n",
+    "    else:\n",
+    "        print (\"Has perdido.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b853b712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'¿Cuál es la capital de Egipto?': 'Cairo', '¿En qué continente se pueden ver más pingüinos?': 'Antártida', '¿En qué país se encuentra la torre Eifeel?': 'Francia', '¿Berlín es la capital de?': 'Alemania', '¿De qué país son típicos los samurais?': 'Japón', '¿A dónde irías si quisieses ver canguros?': 'Australia', '¿A dónde irías si quisieras ver kiwis?': 'Nueva Zelanda', '¿En qué país es tradición pintarse la cara el día de los muertos?': 'México', '¿Tikka masala es un plato tradicional de?...': 'India'}\n",
+      "Respuesta correcta: México\n",
+      "Llevas 1 aciertos\n",
+      "Respuesta correcta: Australia\n",
+      "Llevas 2 aciertos\n",
+      "Respuesta correcta: México\n",
+      "Llevas 3 aciertos\n",
+      "Respuesta correcta: Cairo\n",
+      "Llevas 4 aciertos\n",
+      "Respuesta correcta: Australia\n",
+      "Llevas 5 aciertos\n",
+      "Has ganado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicc_2={\"España\":\"Madrid\", \"Francia\": \"Paris\", \"UK\": \"Londres\", \"Portugal\":\"Lisboa\", \"Bulgaria\":\"Sofia\", \"Marruecos\":\"Rabat\"}\n",
+    "juego_preguntas(cuestionario)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
