--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -12,66 +12,19 @@
      "text": [
       "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
+      "player human option:  Rock\n",
+      "player computer option:  Paper\n",
+      "Player Computer Won!\n",
       "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Rock\n",
-      "It is a draw! Play again!\n",
+      "player human option:  Paper\n",
+      "player computer option:  Rock\n",
+      "Player Human Won!\n",
       "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "\n",
-      "Invalid option, please try again\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n"
+      "player human option:  Scissor\n",
+      "player computer option:  Paper\n",
+      "Player Human Won!\n"
      ]
     }
    ],
@@ -80,21 +33,21 @@
     "\n",
     "import random\n",
     "options = ['Rock','Paper','Scissor']\n",
+    "counter = 0\n",
     "\n",
-    "def play():\n",
-    "    counter = 0\n",
-    "\n",
-    "    while counter != 3:\n",
+    "while counter != 3:\n",
     "        print(\"Welcome to Rock-Paper-Scissor's Game!\")\n",
     "        print(\"Write an option: Rock, Paper or Scissor:\")\n",
     "        \n",
     "        player_human = input(\"Type Player 1 option:\")\n",
-    "        print(player_human)\n",
+    "        print(\"player human option: \", player_human)\n",
+    "\n",
     "        if player_human not in options:\n",
     "            print(\"Invalid option, please try again\")\n",
     "            continue\n",
     "\n",
     "        player_computer = random.choice(options)\n",
+    "        print(\"player computer option: \", player_computer)\n",
     "\n",
     "        if player_human == player_computer:\n",
     "            print(\"It is a draw! Play again!\")\n",
@@ -104,36 +57,28 @@
     "            if player_computer == \"Scissor\":\n",
     "                print(\"Player Human Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
     "            continue\n",
     "\n",
     "        if player_human == \"Scissor\": \n",
     "            if player_computer == \"Paper\":\n",
     "                print(\"Player Human Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
     "            continue\n",
     "            \n",
     "        if player_human == \"Paper\":\n",
     "            if player_computer == \"Rock\":\n",
     "                print(\"Player Human Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                counter = counter+1\n",
-    "                print(counter)\n",
-    "            continue\n",
-    "\n",
-    "play()"
+    "            continue"
    ]
   }
  ],
