--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89d0cc0d",
    "metadata": {},
    "outputs": [
@@ -12,19 +12,54 @@
      "text": [
       "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 0\n",
+      "player human option:  \n",
+      "Invalid option, please try again\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 0\n",
+      "player human option:  Paper\n",
+      "player computer option:  Paper\n",
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 0\n",
+      "player human option:  Paper\n",
+      "player computer option:  Paper\n",
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 0\n",
       "player human option:  Rock\n",
       "player computer option:  Paper\n",
       "Player Computer Won!\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 1\n",
       "player human option:  Paper\n",
-      "player computer option:  Rock\n",
-      "Player Human Won!\n",
-      "Welcome to Rock-Paper-Scissor's Game!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "player human option:  Scissor\n",
       "player computer option:  Paper\n",
-      "Player Human Won!\n"
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 1\n",
+      "player human option:  Paper\n",
+      "player computer option:  Paper\n",
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 1\n",
+      "player human option:  Paper\n",
+      "player computer option:  Scissor\n",
+      "Player Computer Won!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 0\n",
+      "Player Computer Points: 2\n",
+      "player human option:  Paper\n",
+      "player computer option:  Scissor\n",
+      "Player Computer Won!\n",
+      "Total Player Human Points: 0\n",
+      "Total Player Computer Points: 3\n"
      ]
     }
    ],
@@ -33,11 +68,15 @@
     "\n",
     "import random\n",
     "options = ['Rock','Paper','Scissor']\n",
-    "counter = 0\n",
+    "print(\"Welcome to Rock-Paper-Scissor's Game!\")\n",
+    "points_player_human = 0\n",
+    "points_player_computer = 0\n",
     "\n",
-    "while counter != 3:\n",
-    "        print(\"Welcome to Rock-Paper-Scissor's Game!\")\n",
+    "\n",
+    "while (points_player_human != 3) and (points_player_computer != 3):\n",
     "        print(\"Write an option: Rock, Paper or Scissor:\")\n",
+    "        print(\"Player Human Points:\",points_player_human)\n",
+    "        print(\"Player Computer Points:\",points_player_computer)\n",
     "        \n",
     "        player_human = input(\"Type Player 1 option:\")\n",
     "        print(\"player human option: \", player_human)\n",
@@ -56,29 +95,33 @@
     "        if player_human == \"Rock\":\n",
     "            if player_computer == \"Scissor\":\n",
     "                print(\"Player Human Won!\")\n",
-    "                counter = counter+1\n",
+    "                points_player_human = points_player_human+1\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
-    "                counter = counter+1\n",
+    "                points_player_computer = points_player_computer+1\n",
     "            continue\n",
     "\n",
     "        if player_human == \"Scissor\": \n",
     "            if player_computer == \"Paper\":\n",
     "                print(\"Player Human Won!\")\n",
-    "                counter = counter+1\n",
+    "                points_player_human = points_player_human+1\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
-    "                counter = counter+1\n",
+    "                points_player_computer = points_player_computer+1\n",
     "            continue\n",
     "            \n",
     "        if player_human == \"Paper\":\n",
     "            if player_computer == \"Rock\":\n",
     "                print(\"Player Human Won!\")\n",
-    "                counter = counter+1\n",
+    "                points_player_human = points_player_human+1\n",
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
-    "                counter = counter+1\n",
-    "            continue"
+    "                points_player_computer = points_player_computer+1\n",
+    "            continue\n",
+    "\n",
+    "print(\"Total Player Human Points:\",points_player_human)\n",
+    "print(\"Total Player Computer Points:\",points_player_computer)\n",
+    "       \n"
    ]
   }
  ],
