--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b7b8d8c9",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,20 @@
      "output_type": "stream",
      "text": [
       "bienvenide al ahorcado\n",
-      "Andrea, adivina la palabra de 4 letras: _ _ _ _ \n",
+      "Miriam, adivina la palabra de 4 letras: _ _ _ _\n",
       "mal, intentalo de nuevo, tienes: 5 intentos restantes\n",
-      "mal, intentalo de nuevo, tienes: 4 intentos restantes\n",
-      "mal, intentalo de nuevo, tienes: 3 intentos restantes\n",
-      "mal, intentalo de nuevo, tienes: 2 intentos restantes\n",
-      "mal, intentalo de nuevo, tienes: 1 intentos restantes\n",
-      "Miriam gana la partida\n"
+      "r _ _ _\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m letra_adivinar \u001b[38;5;129;01min\u001b[39;00m palabra_secreta:\n\u001b[0;32m     17\u001b[0m     letra_adivinar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintroduce una letra\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m---> 18\u001b[0m     palabra_oculta[palabra_secreta\u001b[38;5;241m.\u001b[39mindex(letra_adivinar)] \u001b[38;5;241m=\u001b[39m letra_adivinar\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(palabra_oculta))\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: substring not found"
      ]
     }
    ],
@@ -66,23 +73,36 @@
     "palabra_secreta = input(f'{jugador_palabra_secreta} cual es tu palabra secreta').lower()\n",
     "\n",
     "# cuantas letras tiene la palabra secreta para imprimir los espacios con barras bajas\n",
-    "palabra_oculta = \"_ \" * len(palabra_secreta) # genera guiones por cada letra\n",
-    "print(f'{jugador_adivinador}, adivina la palabra de {len(palabra_secreta)} letras: {palabra_oculta}')\n",
+    "palabra_oculta = list(\"_\" * len(palabra_secreta)) # genera guiones por cada letra\n",
+    "print(f'{jugador_adivinador}, adivina la palabra de {len(palabra_secreta)} letras: {' '.join(palabra_oculta)}')\n",
     "\n",
     "intentos = 6\n",
     "# cada vez que letra_adivinar != letras_palabra entonces intentos -= 1 y cuando intentos == 0 pierde el jugador_adivinador\n",
     "\n",
-    "letra_adivinar = input('introduce una letra').lower()\n",
+    "\n",
     "while intentos != 1:\n",
-    "    if letra_adivinar in palabra_secreta:\n",
-    "        print('bien')\n",
+    "    if letra_adivinar == palabra_secreta:\n",
+    "        print('has acertado')\n",
+    "        break\n",
+    "    elif letra_adivinar in palabra_secreta:\n",
+    "        letra_adivinar = input('introduce una letra o la palabra secreta').lower()\n",
+    "        palabra_oculta[palabra_secreta.index(letra_adivinar)] = letra_adivinar\n",
+    "        print(' '.join(palabra_oculta))\n",
+    "        \n",
+    "        continue\n",
+    "        \n",
+    "        #for letra_adivinar in palabra_secreta:\n",
+    "\n",
+    "        \n",
     "    else: \n",
     "        intentos -= 1\n",
     "        print(f'mal, intentalo de nuevo, tienes: {intentos} intentos restantes')\n",
     "        letra_adivinar = input('introduce una letra').lower()\n",
     "print(f'{jugador_palabra_secreta} gana la partida')\n",
     "\n",
-    "    \n",
+    "   # reemplazaar el guion por la letra adivinada\n",
+    "   \n",
+    "   # una vez tengas la palabra clara poder introducirla entera\n",
     "\n"
    ]
   },
@@ -104,6 +124,67 @@
     "palabra_secreta = input('cual es tu palabra secreta').lower()\n",
     "palabra_oculta = \"_ \" * len(palabra_secreta)\n",
     "print(palabra_oculta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cfe5fdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_', '_', '_', '_']\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra_secreta = 'roma'\n",
+    "palabra_oculta = list(\"_\" * len(palabra_secreta))\n",
+    "print(palabra_oculta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0472f3ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r', 'o', 'm', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letra = input()\n",
+    "palabra_oculta[palabra_secreta.index(letra)] = letra\n",
+    "print(palabra_oculta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "21c58cd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'r o m a'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(palabra_oculta)"
    ]
   }
  ],
