--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -1,8 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b2a16cd1",
+   "metadata": {},
+   "source": [
+    "Reglas del Juego \"Piedra, Papel y Tijera\":\n",
+    "Dos jugadores eligen una de las tres opciones: \"Piedra\", \"Papel\" o \"Tijera\".\n",
+    "    ->Las reglas para determinar al ganador son:\n",
+    "    -Piedra vence a Tijera.\n",
+    "    -Tijera vence a Papel.\n",
+    "    -Papel vence a Piedra.\n",
+    "    ->El jugador que gana una ronda obtiene un punto.  \n",
+    "    ->El juego continúa hasta que un jugador haya acumulado 3 puntos, convirtiéndose en el ganador.\n",
+    "\n",
+    "    Pistas para las alumnas:\n",
+    "    1. Comienza por definir el número de puntos objetivo que se deben alcanzar para ganar el juego.\n",
+    "    2. Implementa una función que obtenga la elección del jugador y valide que sea una de las opciones válidas (\"Piedra\", \"Papel\" o \"Tijera\").\n",
+    "    3. Utiliza un bucle `while` para llevar un registro de los puntos de cada jugador y continuar el juego hasta que se alcance el número de puntos objetivo.\n",
+    "    4. Genera una elección aleatoria para el segundo jugador (la computadora) utilizando el módulo `random`.\n",
+    "    5. Determina al ganador de cada ronda y actualiza los puntos correspondientes.\n",
+    "    6. Verifica si algún jugador ha alcanzado el número de puntos objetivo y finalicen el juego cuando eso suceda."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89d0cc0d",
    "metadata": {},
    "outputs": [
@@ -14,52 +37,53 @@
       "Write an option: Rock, Paper or Scissor:\n",
       "Player Human Points: 0\n",
       "Player Computer Points: 0\n",
-      "player human option:  \n",
-      "Invalid option, please try again\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Paper\n",
-      "player computer option:  Paper\n",
-      "It is a draw! Play again!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Paper\n",
-      "player computer option:  Paper\n",
+      "player human option:  Rock\n",
+      "player computer option:  Rock\n",
       "It is a draw! Play again!\n",
       "Write an option: Rock, Paper or Scissor:\n",
       "Player Human Points: 0\n",
       "Player Computer Points: 0\n",
       "player human option:  Rock\n",
-      "player computer option:  Paper\n",
-      "Player Computer Won!\n",
+      "player computer option:  Scissor\n",
+      "Player Human Won!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 1\n",
+      "Player Human Points: 1\n",
+      "Player Computer Points: 0\n",
+      "player human option:  Rock\n",
+      "player computer option:  Scissor\n",
+      "Player Human Won!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 2\n",
+      "Player Computer Points: 0\n",
       "player human option:  Paper\n",
       "player computer option:  Paper\n",
       "It is a draw! Play again!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 1\n",
+      "Player Human Points: 2\n",
+      "Player Computer Points: 0\n",
+      "player human option:  Scissor\n",
+      "player computer option:  Scissor\n",
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 2\n",
+      "Player Computer Points: 0\n",
+      "player human option:  Scissor\n",
+      "player computer option:  Scissor\n",
+      "It is a draw! Play again!\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "Player Human Points: 2\n",
+      "Player Computer Points: 0\n",
       "player human option:  Paper\n",
       "player computer option:  Paper\n",
       "It is a draw! Play again!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 1\n",
+      "Player Human Points: 2\n",
+      "Player Computer Points: 0\n",
       "player human option:  Paper\n",
-      "player computer option:  Scissor\n",
-      "Player Computer Won!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 2\n",
-      "player human option:  Paper\n",
-      "player computer option:  Scissor\n",
-      "Player Computer Won!\n",
-      "Total Player Human Points: 0\n",
-      "Total Player Computer Points: 3\n"
+      "player computer option:  Rock\n",
+      "Player Human Won!\n",
+      "Total Player Human Points: 3\n",
+      "Total Player Computer Points: 0\n"
      ]
     }
    ],
@@ -78,7 +102,7 @@
     "        print(\"Player Human Points:\",points_player_human)\n",
     "        print(\"Player Computer Points:\",points_player_computer)\n",
     "        \n",
-    "        player_human = input(\"Type Player 1 option:\")\n",
+    "        player_human = input(\"Type Player 1 option:\").capitalize()\n",
     "        print(\"player human option: \", player_human)\n",
     "\n",
     "        if player_human not in options:\n",
@@ -99,7 +123,6 @@
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                points_player_computer = points_player_computer+1\n",
-    "            continue\n",
     "\n",
     "        if player_human == \"Scissor\": \n",
     "            if player_computer == \"Paper\":\n",
@@ -108,7 +131,6 @@
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                points_player_computer = points_player_computer+1\n",
-    "            continue\n",
     "            \n",
     "        if player_human == \"Paper\":\n",
     "            if player_computer == \"Rock\":\n",
@@ -117,11 +139,12 @@
     "            else:\n",
     "                print(\"Player Computer Won!\")\n",
     "                points_player_computer = points_player_computer+1\n",
-    "            continue\n",
     "\n",
-    "print(\"Total Player Human Points:\",points_player_human)\n",
-    "print(\"Total Player Computer Points:\",points_player_computer)\n",
-    "       \n"
+    "        print(\"Human Points:\",points_player_human, \"Computer Points:\",points_player_computer)\n",
+    "        if points_player_human == 3:\n",
+    "          print(\"Player Human is the WINNER!\")\n",
+    "        elif points_player_computer == 3:\n",
+    "            print(\"Player Computer is the WINNER\")   \n"
    ]
   },
   {
