--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89d0cc0d",
    "metadata": {},
    "outputs": [
@@ -35,61 +35,39 @@
      "text": [
       "Welcome to Rock-Paper-Scissor's Game!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 0\n",
       "player human option:  Rock\n",
-      "player computer option:  Rock\n",
-      "It is a draw! Play again!\n",
+      "player computer option:  Paper\n",
+      "Player Computer Won!\n",
+      "Human Points: 0 Computer Points: 1\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 0\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Rock\n",
-      "player computer option:  Scissor\n",
-      "Player Human Won!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 1\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Rock\n",
-      "player computer option:  Scissor\n",
-      "Player Human Won!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 2\n",
-      "Player Computer Points: 0\n",
       "player human option:  Paper\n",
       "player computer option:  Paper\n",
       "It is a draw! Play again!\n",
       "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 2\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Scissor\n",
+      "player human option:  Rock\n",
       "player computer option:  Scissor\n",
-      "It is a draw! Play again!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 2\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Scissor\n",
-      "player computer option:  Scissor\n",
-      "It is a draw! Play again!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 2\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Paper\n",
-      "player computer option:  Paper\n",
-      "It is a draw! Play again!\n",
-      "Write an option: Rock, Paper or Scissor:\n",
-      "Player Human Points: 2\n",
-      "Player Computer Points: 0\n",
-      "player human option:  Paper\n",
-      "player computer option:  Rock\n",
       "Player Human Won!\n",
-      "Total Player Human Points: 3\n",
-      "Total Player Computer Points: 0\n"
+      "Human Points: 1 Computer Points: 1\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "player human option:  Scissor\n",
+      "player computer option:  Paper\n",
+      "Player Human Won!\n",
+      "Human Points: 2 Computer Points: 1\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "player human option:  Paper\n",
+      "player computer option:  Scissor\n",
+      "Player Computer Won!\n",
+      "Human Points: 2 Computer Points: 2\n",
+      "Write an option: Rock, Paper or Scissor:\n",
+      "player human option:  Rock\n",
+      "player computer option:  Scissor\n",
+      "Player Human Won!\n",
+      "Human Points: 3 Computer Points: 2\n",
+      "Player Human is the WINNER!\n"
      ]
     }
    ],
    "source": [
-    "#Rock‑Paper‑Scissors Game\n",
-    "\n",
     "import random\n",
     "options = ['Rock','Paper','Scissor']\n",
     "print(\"Welcome to Rock-Paper-Scissor's Game!\")\n",
@@ -99,8 +77,6 @@
     "\n",
     "while (points_player_human != 3) and (points_player_computer != 3):\n",
     "        print(\"Write an option: Rock, Paper or Scissor:\")\n",
-    "        print(\"Player Human Points:\",points_player_human)\n",
-    "        print(\"Player Computer Points:\",points_player_computer)\n",
     "        \n",
     "        player_human = input(\"Type Player 1 option:\").capitalize()\n",
     "        print(\"player human option: \", player_human)\n",
@@ -144,7 +120,7 @@
     "        if points_player_human == 3:\n",
     "          print(\"Player Human is the WINNER!\")\n",
     "        elif points_player_computer == 3:\n",
-    "            print(\"Player Computer is the WINNER\")   \n"
+    "            print(\"Player Computer is the WINNER\")"
    ]
   },
   {
