--- a/piedrapapeltijera_ana.ipynb
+++ b/piedrapapeltijera_ana.ipynb
@@ -12,15 +12,7 @@
     "    -Tijera vence a Papel.\n",
     "    -Papel vence a Piedra.\n",
     "    ->El jugador que gana una ronda obtiene un punto.  \n",
-    "    ->El juego continúa hasta que un jugador haya acumulado 3 puntos, convirtiéndose en el ganador.\n",
-    "\n",
-    "    Pistas para las alumnas:\n",
-    "    1. Comienza por definir el número de puntos objetivo que se deben alcanzar para ganar el juego.\n",
-    "    2. Implementa una función que obtenga la elección del jugador y valide que sea una de las opciones válidas (\"Piedra\", \"Papel\" o \"Tijera\").\n",
-    "    3. Utiliza un bucle `while` para llevar un registro de los puntos de cada jugador y continuar el juego hasta que se alcance el número de puntos objetivo.\n",
-    "    4. Genera una elección aleatoria para el segundo jugador (la computadora) utilizando el módulo `random`.\n",
-    "    5. Determina al ganador de cada ronda y actualiza los puntos correspondientes.\n",
-    "    6. Verifica si algún jugador ha alcanzado el número de puntos objetivo y finalicen el juego cuando eso suceda."
+    "    ->El juego continúa hasta que un jugador haya acumulado 3 puntos, convirtiéndose en el ganador."
    ]
   },
   {
