proyecto_preguntas_basico.ipynb

--- a/PROYECTOEJEMPLO.ipynb
+++ b/PROYECTOEJEMPLO.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d2c3dfc5",
    "metadata": {},
    "outputs": [
@@ -64,14 +64,6 @@
      "output_type": "stream",
      "text": [
       "{'¿Cuál es la capital de Egipto?': 'Cairo', '¿En qué continente se pueden ver más pingüinos?': 'Antártida', '¿En qué país se encuentra la torre Eifeel?': 'Francia', '¿Berlín es la capital de?': 'Alemania', '¿De qué país son típicos los samurais?': 'Japón', '¿A dónde irías si quisieses ver canguros?': 'Australia', '¿A dónde irías si quisieras ver kiwis?': 'Nueva Zelanda', '¿En qué país es tradición pintarse la cara el día de los muertos?': 'México', '¿Tikka masala es un plato tradicional de?...': 'India'}\n",
-      "Respuesta correcta: Nueva Zelanda\n",
-      "Llevas 1 aciertos\n",
-      "Respuesta correcta: India\n",
-      "Llevas 2 aciertos\n",
-      "Respuesta correcta: Francia\n",
-      "Llevas 3 aciertos\n",
-      "Respuesta correcta: Australia\n",
-      "Llevas 4 aciertos\n",
       "Mala suerte, responde de nuevo\n",
       "Llevas 1 errores\n",
       "Mala suerte, responde de nuevo\n",
@@ -120,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c1c52c17",
    "metadata": {},
    "outputs": [],
@@ -192,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
