--- a/piedrapapeltijera.ipynb
+++ b/piedrapapeltijera.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ce290d5d",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "8c6938eb",
    "metadata": {},
    "outputs": [],
@@ -71,6 +71,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "39f9acd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opciones = ['piedra','papel','tijeras']\n",
+    "\n",
+    "ordenador = random.choice(opciones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "29eaeb0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'papel'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordenador"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "07b59899",
    "metadata": {},
@@ -88,6 +121,7 @@
    ],
    "source": [
     "opciones = ['piedra','papel','tijeras']\n",
+    "\n",
     "ordenador = random.choice(opciones)\n",
     "\n",
     "jugador = input(\"Seleccione una opción entre piedra, papel o tijeras\").lower()\n",
