--- a/proyecto_preguntas_basico.ipynb
+++ b/proyecto_preguntas_basico.ipynb
@@ -5,12 +5,23 @@
    "execution_count": null,
    "id": "f73d17b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mala suerte, responde de nuevo\n",
+      "Llevas 1 errores\n",
+      "Respuesta correcta: Alemania\n",
+      "Llevas 1 aciertos\n"
+     ]
+    }
+   ],
    "source": [
     "# Por mejorar: 1. Input (cambiar mayúsculas/minúsculas, limitar a caracteres no numéricos, etc.). 2. Incluir el código dentro de función/funciones. 3\n",
     "\n",
     "cuestionario = {\"¿Cuál es la capital de Egipto?\":\"Cairo\", \"¿En qué continente se pueden ver más pingüinos?\" : \"Antártida\", \"¿En qué país se encuentra la torre Eifeel?\": \"Francia\", \"¿Berlín es la capital de?\" : \"Alemania\", \"¿De qué país son típicos los samurais?\" : \"Japón\", \"¿A dónde irías si quisieses ver canguros?\":\"Australia\", \"¿A dónde irías si quisieras ver kiwis?\":\"Nueva Zelanda\", \"¿En qué país es tradición pintarse la cara el día de los muertos?\": \"México\", \"¿Tikka masala es un plato tradicional de?...\": \"India\"}\n",
-    "print(cuestionario)\n",
+    "\n",
     "import random\n",
     "intentosbuenos=5\n",
     "intentosmalos= 3\n",
@@ -23,7 +34,7 @@
     "while intentosbuenos != 0 and intentosmalos != 0:\n",
     "    pregunta_aleatoria = random.choice(list(cuestionario.keys()))\n",
     "    respuesta_correcta = cuestionario[pregunta_aleatoria]\n",
-    "    eleccion= input(pregunta_aleatoria)\n",
+    "    eleccion= (input(pregunta_aleatoria)).title()\n",
     "\n",
     "    if eleccion == respuesta_correcta:\n",
     "        print (f\"Respuesta correcta: {respuesta_correcta}\")\n",
@@ -46,8 +57,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
