queda añadir imagenes

--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -46,27 +46,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bienvenide al ahorcado\n",
+      "Bienvenide al ahorcado\n",
       "Miriam, adivina la palabra de 4 letras: _ _ _ _\n",
-      "mal, intentalo de nuevo, tienes: 5 intentos restantes\n",
-      "r _ _ _\n"
+      "mal, intentalo de nuevo, tienes: 5 intentos restantes\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "substring not found",
+     "evalue": "Cannot embed the '4' image format",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m letra_adivinar \u001b[38;5;129;01min\u001b[39;00m palabra_secreta:\n\u001b[0;32m     17\u001b[0m     letra_adivinar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintroduce una letra\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m---> 18\u001b[0m     palabra_oculta[palabra_secreta\u001b[38;5;241m.\u001b[39mindex(letra_adivinar)] \u001b[38;5;241m=\u001b[39m letra_adivinar\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(palabra_oculta))\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: substring not found"
+      "Cell \u001b[1;32mIn[10], line 35\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmal, intentalo de nuevo, tienes: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintentos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m intentos restantes\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image, display\n\u001b[1;32m---> 35\u001b[0m     display(Image(filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m4\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intentos \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmal, intentalo de nuevo, tienes: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintentos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m intentos restantes, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mjugador_palabra_secreta\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ha dibujado el cuerpo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\miria\\anaconda3\\Lib\\site-packages\\IPython\\core\\display.py:961\u001b[0m, in \u001b[0;36mImage.__init__\u001b[1;34m(self, data, url, filename, format, embed, width, height, retina, unconfined, metadata, alt)\u001b[0m\n\u001b[0;32m    958\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membed \u001b[38;5;241m=\u001b[39m embed \u001b[38;5;28;01mif\u001b[39;00m embed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m (url \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m    960\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membed \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ACCEPTABLE_EMBEDDINGS:\n\u001b[1;32m--> 961\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot embed the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m image format\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat))\n\u001b[0;32m    962\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membed:\n\u001b[0;32m    963\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mimetype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_MIMETYPES\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat)\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot embed the '4' image format"
      ]
     }
    ],
    "source": [
     "\n",
-    "print('bienvenide al ahorcado')\n",
+    "print('Bienvenide al ahorcado')\n",
     "jugador_adivinador = input('introduce el nombre del jugador adivinador').capitalize()\n",
     "jugador_palabra_secreta = input('introduce el nombre del jugador que pondra la palabra secreta').capitalize()\n",
     "\n",
@@ -81,11 +81,11 @@
     "\n",
     "\n",
     "while intentos != 1:\n",
+    "    letra_adivinar = input('introduce una letra o la palabra secreta').lower()\n",
     "    if letra_adivinar == palabra_secreta:\n",
-    "        print('has acertado')\n",
+    "        print(f'has acertado la palabra secreta era: {palabra_secreta}')\n",
     "        break\n",
     "    elif letra_adivinar in palabra_secreta:\n",
-    "        letra_adivinar = input('introduce una letra o la palabra secreta').lower()\n",
     "        palabra_oculta[palabra_secreta.index(letra_adivinar)] = letra_adivinar\n",
     "        print(' '.join(palabra_oculta))\n",
     "        \n",
@@ -96,8 +96,10 @@
     "        \n",
     "    else: \n",
     "        intentos -= 1\n",
+    "        \n",
     "        print(f'mal, intentalo de nuevo, tienes: {intentos} intentos restantes')\n",
-    "        letra_adivinar = input('introduce una letra').lower()\n",
+    "            \n",
+    "        \n",
     "print(f'{jugador_palabra_secreta} gana la partida')\n",
     "\n",
     "   # reemplazaar el guion por la letra adivinada\n",
